--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "esplora-api-client",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "wp-umd": "npx webpack --mode production --config webpack.config.umd.js",
+    "wp-umd-dev": "npx webpack --mode development --config webpack.config.umd.js",
+    "wp-common": "npx webpack --mode production --config webpack.config.js",
+    "wp-common-dev": "npx webpack --mode development --config webpack.config.js",
+    "wp": "yarn wp-umd && yarn wp-common",
+    "wpdev": "yarn wp-umd-dev && yarn wp-common-dev",
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
