--- a/package.json
+++ b/package.json
@@ -4,19 +4,11 @@
   "description": "esplora-api-client",
   "main": "index.js",
   "scripts": {
-    "wp-umd": "npx webpack --mode production --config webpack.config.umd.js",
-    "wp-umd-dev": "npx webpack --mode development --config webpack.config.umd.js",
-    "wp-common": "npx webpack --mode production --config webpack.config.js",
-    "wp-common-dev": "npx webpack --mode development --config webpack.config.js",
-    "wp": "yarn wp-umd && yarn wp-common",
-    "wpdev": "yarn wp-umd-dev && yarn wp-common-dev",
+    "build": "tsc",
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "ts-loader": "^9.2.6",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
